# FYP

./: README.md  app.py  pyproject.toml  requirements.in  requirements.txt  requirments.txt  utils.py
Kmeans/: kmeans_algorithm.py  recommendation.py
dashboard/: index.html  script.js  style.jss
rasp_pi/: camera.py  emotion_detect.py  manual_mode.py
server/: c++ programs.code-workspace
