[project]
name = "fyp"
version = "0.1.0"
description = ""
authors = [
    {name = "Subhash",email = "subhash.mh20@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow (>=2.18.0,<3.0.0)",
    "blinker (>=1.9.0,<2.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "contourpy (>=1.3.1,<2.0.0)",
    "cycler (>=0.12.1,<0.13.0)",
    "flask (>=3.1.0,<4.0.0)",
    "flask-mail (>=0.10.0,<0.11.0)",
    "fonttools (>=4.56.0,<5.0.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "kiwisolver (>=1.4.8,<2.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "opencv-contrib-python (>=4.11.0.86,<5.0.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "packaging (>=24.2,<25.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pycryptodome (>=3.21.0,<4.0.0)",
    "pyparsing (>=3.2.1,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
