[project]
name = "fyp"
version = "0.1.0"
description = ""
authors = [
    {name = "Subhash",email = "subhash.mh20@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
